--- a/.github/workflows/build-lldb.yml
+++ b/.github/workflows/build-lldb.yml
@@ -9,12 +9,6 @@ on:
         required: false
         type: string
 
-      android-ndk-version:
-        description: version of Android NDK
-        default: r21e
-        required: false
-        type: string
-
       android-platform:
         description: target Android platform
         default: android-21
@@ -26,12 +20,6 @@ on:
       llvm-ref:
         description: ref/tag for llvm-project
         default: main
-        required: false
-        type: string
-
-      android-ndk-version:
-        description: version of Android NDK
-        default: r21e
         required: false
         type: string
 
@@ -149,17 +137,11 @@ jobs:
           ref: ${{ inputs.llvm-ref }}
           path: ${{ github.workspace }}/SourceCache/llvm
 
-      - uses: nttld/setup-ndk@v1
-        id: setup-ndk
-        with:
-          ndk-version: ${{ inputs.android-ndk-version }}
-          local-cache: true
-
       - name: Configure lldb build
         run: |
           cmake -B ${{ github.workspace }}/BinaryCache/llvm-android             \
                 -S ${{ github.workspace }}/SourceCache/llvm/llvm                \
-                -D CMAKE_TOOLCHAIN_FILE=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake  \
+                -D CMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_LATEST_HOME/build/cmake/android.toolchain.cmake  \
                 -D CROSS_TOOLCHAIN_FLAGS_NATIVE='-DCMAKE_C_COMPILER=cc;-DCMAKE_CXX_COMPILER=c++'  \
                 -D ANDROID_ABI=${{ matrix.abi }}                                \
                 -D ANDROID_PLATFORM=${{ inputs.android-platform }}              \
