use a smaller disk for Android emulator

--- a/.github/workflows/test-lldb.yml
+++ b/.github/workflows/test-lldb.yml
@@ -172,6 +172,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           arch: ${{ matrix.processor }}
+          disk-size: 4G
           force-avd-creation: false
           emulator-options: -no-window -noaudio -no-boot-anim -camera-back none
           disable-animations: false
