--- a/.github/workflows/build-lldb.yml
+++ b/.github/workflows/build-lldb.yml
@@ -92,37 +92,7 @@ jobs:
             triple: x86_64-unknown-linux-android
 
     steps:
-      - name: free-up disk space
-        run: |
-          df -h /home
-          sudo apt purge -q aspnetcore-* \
-                            azure-* \
-                            containerd.io \
-                            containernetworking-plugins \
-                            docker-ce* \
-                            dotnet-* \
-                            firefox \
-                            gfortran-* \
-                            google-chrome-stable \
-                            google-cloud-cli* \
-                            kubectl \
-                            linux-azure-* \
-                            linux-modules-*-azure \
-                            microsoft-edge-stable \
-                            mono-* \
-                            monodoc-* \
-                            msbuild \
-                            mysql-* \
-                            podman \
-                            postgresql-* \
-                            powershell \
-                            r-base-core \
-                            vim-runtime
-          sudo apt autoremove
-          sudo rm -rf /usr/local/share/powershell
-          sudo rm -rf /var/lib/docker
-          sudo rm -rf /usr/share/swift
-          df -h /home
+      - uses: andrurogerz/action-spacemaker@main
 
       - uses: seanmiddleditch/gha-setup-ninja@v5
 
