build the lldb test target to ensure all needed tools are produced

--- a/.github/workflows/build-lldb.yml
+++ b/.github/workflows/build-lldb.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Build llvm
         run: |
           cmake --build  ${{ github.workspace }}/BinaryCache/llvm               \
-                --target lldb                                                   \
+                --target tools/lldb/test/API/lldb-api-test-deps                 \
                 --config Release
 
       # Tar the build output to preserve permissions.
