[gha] explicitly move to ubuntu-24.04 for build/test

--- a/.github/workflows/test-lldb.yml
+++ b/.github/workflows/test-lldb.yml
@@ -10,7 +10,7 @@ jobs:
 
   test-lldb-android:
     needs: [ build-lldb ]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
