--- a/.github/workflows/build-lldb.yml
+++ b/.github/workflows/build-lldb.yml
@@ -34,7 +34,7 @@ env:
 
 jobs:
   build-lldb-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: seanmiddleditch/gha-setup-ninja@v5
@@ -83,7 +83,7 @@ jobs:
           path: ${{ github.workspace }}/BinaryCache/llvm.tar
 
   build-lldb-server-android:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       matrix:
